--- a/cog.toml
+++ b/cog.toml
@@ -6,7 +6,11 @@ generate_mono_repository_global_tag = true
 branch_whitelist = []
 skip_ci = "[skip ci]"
 skip_untracked = false
-pre_bump_hooks = []
+pre_bump_hooks = [
+	"cargo build --release",
+	"echo 'bumping from {{latest}} to {{version}}'",
+	"cargo bump {{version}}",
+]
 post_bump_hooks = []
 pre_package_bump_hooks = []
 post_package_bump_hooks = []
