--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,12 @@ on:
 
 jobs:
   test:
-    name: Build and Check 
+    name: Build and Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           components: clippy, rustfmt
       - name: Build and test
         run: cargo test --all-features
